tests/fsharp/typecheck/sigs/neg53.bsl

neg53.fs(8,25,8,30): typecheck error FS0039: The value or constructor '_arg1' is not defined.
